--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Github Pages Tutorial App</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>Github Pages Tutorial App1</h1>
-      <p>
-        This is a sample static html and css app deployed using Github Pages
-      </p>
-      <div class="button-container">
-        <a
-          href="https://github.com/kavinvalli/gh-pages-tutorial"
-          target="_blank"
-          ><button>Visit Repository</button></a
-        >
-        <a
-          href="https://livecode247.com/deploying-a-static-html-and-css-site-using-github-pages"
-          target="_blank"
-          ><button>Visit Blog Post</button></a
-        >
-      </div>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My GitHub Page</h1>
+        <p>Building awesome projects and sharing knowledge!</p>
+    </header>
+    
+    <section class="content">
+        <h2>About Me</h2>
+        <p>Hello! I’m a developer, tech enthusiast, and problem-solver. Here, I share my projects, ideas, and tutorials.</p>
+        
+        <h2>Projects</h2>
+        <div class="projects">
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>Description of your first project. <a href="#">View Project</a></p>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Description of your second project. <a href="#">View Project</a></p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>Follow me on <a href="https://github.com/your-username">GitHub</a></p>
+    </footer>
+</body>
 </html>
