--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Core Computing Inc. All rights reserved.</li><li>Design: <a href="https://github.com/xander-codepunk">xander-codepunk</a></li>
 							</ul>
 						</div>
 					</section>
